--- a/coronavirus/jupyter_notebooks/Hopkins_Coronavirus_Executor.ipynb
+++ b/coronavirus/jupyter_notebooks/Hopkins_Coronavirus_Executor.ipynb
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,20 +520,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(25489.0, 0.0, 307.0)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "us['daily_new_cases'].sum(), us['daily_new_recoveries'].sum(), us['daily_new_deaths'].sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>daily_new_cases</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-01-22</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-01-23</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-01-24</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020-01-25</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-01-26</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        date  daily_new_cases\n",
+       "0 2020-01-22              1.0\n",
+       "1 2020-01-23              0.0\n",
+       "2 2020-01-24              1.0\n",
+       "3 2020-01-25              0.0\n",
+       "4 2020-01-26              3.0"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "us.groupby(['date'])['daily_new_cases'].sum().reset_index().head(5)"
    ]
@@ -635,9 +715,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2020-03-16    4\n",
+       "2020-03-18    4\n",
+       "2020-03-06    2\n",
+       "2020-03-13    1\n",
+       "2020-01-23    1\n",
+       "2020-02-29    1\n",
+       "2020-02-07    1\n",
+       "2020-03-09    1\n",
+       "2020-01-31    1\n",
+       "2020-03-20    1\n",
+       "2020-02-02    1\n",
+       "Name: date, dtype: int64"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# This indicates a shift in the data\n",
     "df.loc[df['daily_new_cases'] < 0]['date'].value_counts()"
@@ -645,9 +747,235 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>province_or_state</th>\n",
+       "      <th>country_or_region</th>\n",
+       "      <th>date</th>\n",
+       "      <th>running_total_cases</th>\n",
+       "      <th>state_and_country</th>\n",
+       "      <th>running_total_cases_prev_day</th>\n",
+       "      <th>daily_new_cases</th>\n",
+       "      <th>running_total_recoveries</th>\n",
+       "      <th>running_total_recoveries_prev_day</th>\n",
+       "      <th>daily_new_recoveries</th>\n",
+       "      <th>running_total_deaths</th>\n",
+       "      <th>running_total_deaths_prev_day</th>\n",
+       "      <th>daily_new_deaths</th>\n",
+       "      <th>state_name</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>first_case_state_rank</th>\n",
+       "      <th>first_case_country_rank</th>\n",
+       "      <th>country_code_2</th>\n",
+       "      <th>country_code_3</th>\n",
+       "      <th>country_population_2018</th>\n",
+       "      <th>country_median_age</th>\n",
+       "      <th>country_running_agg</th>\n",
+       "      <th>hundred_case_state_rank</th>\n",
+       "      <th>hundred_case_country_rank</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>16938</th>\n",
+       "      <td>Grand Princess</td>\n",
+       "      <td>US</td>\n",
+       "      <td>2020-03-16</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Grand Princess-US</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Grand Princess</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>US</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>327167434.0</td>\n",
+       "      <td>38.1</td>\n",
+       "      <td>4632</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17228</th>\n",
+       "      <td>NV</td>\n",
+       "      <td>US</td>\n",
+       "      <td>2020-03-18</td>\n",
+       "      <td>55</td>\n",
+       "      <td>NV-US</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Nevada</td>\n",
+       "      <td>39.876019</td>\n",
+       "      <td>-117.224121</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>US</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>327167434.0</td>\n",
+       "      <td>38.1</td>\n",
+       "      <td>7783</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>12.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17374</th>\n",
+       "      <td>UT</td>\n",
+       "      <td>US</td>\n",
+       "      <td>2020-03-20</td>\n",
+       "      <td>78</td>\n",
+       "      <td>UT-US</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>-2.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Utah</td>\n",
+       "      <td>39.419220</td>\n",
+       "      <td>-111.950684</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>US</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>327167434.0</td>\n",
+       "      <td>38.1</td>\n",
+       "      <td>19100</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>14.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17420</th>\n",
+       "      <td>WA</td>\n",
+       "      <td>US</td>\n",
+       "      <td>2020-03-18</td>\n",
+       "      <td>1014</td>\n",
+       "      <td>WA-US</td>\n",
+       "      <td>1076.0</td>\n",
+       "      <td>-62.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>55</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Washington</td>\n",
+       "      <td>47.751076</td>\n",
+       "      <td>-120.740135</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>US</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>327167434.0</td>\n",
+       "      <td>38.1</td>\n",
+       "      <td>7783</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>12.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      province_or_state country_or_region       date  running_total_cases  \\\n",
+       "16938    Grand Princess                US 2020-03-16                   20   \n",
+       "17228                NV                US 2020-03-18                   55   \n",
+       "17374                UT                US 2020-03-20                   78   \n",
+       "17420                WA                US 2020-03-18                 1014   \n",
+       "\n",
+       "       state_and_country  running_total_cases_prev_day  daily_new_cases  \\\n",
+       "16938  Grand Princess-US                          21.0             -1.0   \n",
+       "17228              NV-US                          56.0             -1.0   \n",
+       "17374              UT-US                          80.0             -2.0   \n",
+       "17420              WA-US                        1076.0            -62.0   \n",
+       "\n",
+       "       running_total_recoveries  running_total_recoveries_prev_day  \\\n",
+       "16938                         0                                0.0   \n",
+       "17228                         0                                0.0   \n",
+       "17374                         0                                0.0   \n",
+       "17420                         0                                1.0   \n",
+       "\n",
+       "       daily_new_recoveries  running_total_deaths  \\\n",
+       "16938                   0.0                     0   \n",
+       "17228                   0.0                     1   \n",
+       "17374                   0.0                     0   \n",
+       "17420                  -1.0                    55   \n",
+       "\n",
+       "       running_total_deaths_prev_day  daily_new_deaths      state_name  \\\n",
+       "16938                            0.0               0.0  Grand Princess   \n",
+       "17228                            1.0               0.0          Nevada   \n",
+       "17374                            0.0               0.0            Utah   \n",
+       "17420                           55.0               0.0      Washington   \n",
+       "\n",
+       "        latitude   longitude  first_case_state_rank  first_case_country_rank  \\\n",
+       "16938        NaN         NaN                   10.0                     43.0   \n",
+       "17228  39.876019 -117.224121                    8.0                     45.0   \n",
+       "17374  39.419220 -111.950684                    9.0                     47.0   \n",
+       "17420  47.751076 -120.740135                   19.0                     45.0   \n",
+       "\n",
+       "      country_code_2 country_code_3  country_population_2018  \\\n",
+       "16938             US            USA              327167434.0   \n",
+       "17228             US            USA              327167434.0   \n",
+       "17374             US            USA              327167434.0   \n",
+       "17420             US            USA              327167434.0   \n",
+       "\n",
+       "       country_median_age  country_running_agg  hundred_case_state_rank  \\\n",
+       "16938                38.1                 4632                      NaN   \n",
+       "17228                38.1                 7783                      NaN   \n",
+       "17374                38.1                19100                      NaN   \n",
+       "17420                38.1                 7783                     12.0   \n",
+       "\n",
+       "       hundred_case_country_rank  \n",
+       "16938                       10.0  \n",
+       "17228                       12.0  \n",
+       "17374                       14.0  \n",
+       "17420                       12.0  "
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# This indicates a shift in the data\n",
     "us.loc[us['daily_new_cases'] < 0]"
@@ -655,11 +983,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(25489.0, 0.0, 307.0)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "us['daily_new_cases'].sum(), us['daily_new_recoveries'].sum(), us['daily_new_deaths'].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Not Provided             7\n",
+       "Queensland               2\n",
+       "NV                       1\n",
+       "WA                       1\n",
+       "UT                       1\n",
+       "Northern Territory       1\n",
+       "Saint Barthelemy         1\n",
+       "Guizhou                  1\n",
+       "Diamond Princess         1\n",
+       "Grand Princess           1\n",
+       "From Diamond Princess    1\n",
+       "Name: province_or_state, dtype: int64"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# This indicates a shift in the data\n",
+    "df.loc[df['daily_new_cases'] < 0]['province_or_state'].value_counts()"
    ]
   },
   {
@@ -667,10 +1038,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# This indicates a shift in the data\n",
-    "df.loc[df['daily_new_cases'] < 0]['province_or_state'].value_counts()"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
